<resources>
    <string name="app_name">Gif Maker</string>
    <string name="action_settings">Settings</string>
    <string name="pref_compression">Compression</string>
    <string name="pref_repeat">Repeat Indefinitely</string>
    <string name="load_gif">Load From File Manager</string>
    <string name="upload_gif">Upload</string>
    <string name="clear">Reset</string>
    <string name="short_instructions">Add a frame with the  +  sign below.</string>
    <string name="title_hint">Enter GIF filename, or leave blank</string>
    <string name="pref_repeat_summary">Otherwise, run twice and stop</string>
    <string name="pref_compression_summary">Higher quality (100) will significantly increase file size</string>
    <string name="pref_default_title">Default GIF Filename</string>
    <string name="pref_delay_summary">Frame switch in milliseconds</string>
    <string name="pref_delay">Delay Between Frames</string>
    <string name="pref_gif_category">GIF Generation</string>
    <!--<string name="pref_app_category">Application Information</string>-->
    <string name="remove">Remove</string>
    <string name="image_options">Image Options</string>
    <string name="share_gif">Share</string>
    <string name="view_activity_title">GIF Viewer</string>
    <string name="preference_activity_title">Preferences</string>
    <string name="instructions_activity_title">Instructions</string>
    <string name="source">Source Code</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2324532608407659/3072049119</string>
    <string name="requirements_title">Image Requirements</string>
    <string name="title_file_size">File Sizes</string>
    <string name="title_interface">User Interface</string>
    <string name="app_intro">This application is a simple utility for creating and viewing GIF
        files on an Android phone or tablet.</string>
    <string name="user_interface">You\'ll need an external File Manager application.\nClick
        on the plus sign on the lower right hand side
        to add JPG images one at a time.\nIf left blank, the GIF filename will be defined by Preferences.\nClick
        on an Image ID to view it\s preview.\nLong click an Image ID to remove it from the list.\nGIFs
        are saved to the Gifs/ directory inside of Pictures/.\nWhen selecting a GIF from the
        GIFs directory activity, long click an item to delete it.
    </string>
    <string name="requirements">Selected images must be JPG (or JPEG) format.\nThe
        images must be the same dimensions.</string>
    <string name="file_size">GIF file sizes will quickly get out of hand - while Fissure can
        certainly create GIFs, it won\'t transfer them off the phone!\nIf
        planning on sharing a GIF, try to keep it\'s compression below 85, and well below that
        if the amount of frames exceeds 5.</string>
    <string name="generate_btn">Generate</string>
    <string name="title_images">GIF Frames:</string>
    <string name="app_version_title">Application Version</string>
    <string name="license_title">Licence</string>
    <string name="author_title">Developer</string>
    <string name="app_version">Fissure GIF x.x.x</string>
    <string name="license">GPLv3</string>
    <string name="author">Fenimore Love</string>
    <string name="clear_all">Clear All</string>
    <string name="refresh">Refresh</string>
    <string name="files_activity_title">GIFs directory</string>
    <string name="title_select">Select</string>
    <string name="title_view">View</string>
    <string name="title_clear">Clear</string>
    <string name="title_instructions">Instructions</string>
    <string name="view_gif_directory">View GIF Directory</string>
    <string name="pref_dir_category">Directory Settings</string>
    <string name="pref_img_load_title">Load images in directory list</string>
    <string name="pref_img_load_summary">Too many GIFs might crash or crash the directory view</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_list">\@Swati4star @naofum</string>
</resources>
